--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -58,6 +59,10 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+        <section id="tweets">
+
+
+        </section>
       </section>
     </main>
   </body>
