Get nav bar fixed at the top

--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,45 @@
               <div class="likes"> <i class="fab fa-font-awesome-flag"></i> <i class="fas fa-retweet"></i><i class="fas fa-heart"></i></div>
             </footer>
           </article>
+          <article>
+            <header>
+              <h4> <i class="far fa-meh-blank"></i>Newton </h4>
+              <h5>@SirIsaac</h5>
+            </header>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            </p>
+            <footer>
+              <div class="date">10 days ago</div>
+              <div class="likes"> <i class="fab fa-font-awesome-flag"></i> <i class="fas fa-retweet"></i><i class="fas fa-heart"></i></div>
+            </footer>
+          </article>
+          <article>
+            <header>
+              <h4> <i class="far fa-meh-blank"></i>Newton </h4>
+              <h5>@SirIsaac</h5>
+            </header>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            </p>
+            <footer>
+              <div class="date">10 days ago</div>
+              <div class="likes"> <i class="fab fa-font-awesome-flag"></i> <i class="fas fa-retweet"></i><i class="fas fa-heart"></i></div>
+            </footer>
+          </article>
+          <article>
+            <header>
+              <h4> <i class="far fa-meh-blank"></i>Newton </h4>
+              <h5>@SirIsaac</h5>
+            </header>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            </p>
+            <footer>
+              <div class="date">10 days ago</div>
+              <div class="likes"> <i class="fab fa-font-awesome-flag"></i> <i class="fas fa-retweet"></i><i class="fas fa-heart"></i></div>
+            </footer>
+          </article>
         </section>
       </section>
     </main>
