--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form action="/tweets/" method="POST">
-          <label for="tweet-text">What are you humming about?</label>
+          <label for="tweet-text">What are you humming about?</label> <div id="length-err-msg"></div>
           <textarea name="text" id="tweet-text"></textarea>
           <div class="bottomLine">
             <button id="tweetBtn" type="submit">Tweet</button>
@@ -62,7 +62,7 @@
           </div>
         </form>
         <section id="tweets">
-          
+
         </section>
       </section>
     </main>
