Clean up, eslint, comment code

--- a/public/index.html
+++ b/public/index.html
@@ -30,22 +30,24 @@
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-a11y="true"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+    integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+    crossorigin="anonymous"></script>
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>TWEETER</span>
-      <div> Write a new tweet</div>
+      <div> Write a new tweet <i class="fas fa-arrow-circle-down"></i></div>
     </nav>
     <div id="head-and-container">
-      <header>
+      <header id="user-info">
         <div class="avatar">
-            <img src="/images/profile-hex.png"> 
+            <img src="/images/profile-male.png"> 
         </div>
-        <br>
         <div class="userName">
-            <h2>Ievgen Dilevskyi</h2>
+            <h2>Eugene</h2>
         </div>
       </header>
 
