Add docs folder with screenshots

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <img src="/images/profile-male.png"> 
         </div>
         <div class="userName">
-            <h2>Eugene</h2>
+            <h2>Myrtie Marsh</h2>
         </div>
       </header>
 
